--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "monsters-dex",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://kelvin0712.github.io/monsterdex",
+  "homepage": "https://kelvin0712.github.io/monsterdex/",
   "dependencies": {
     "gh-pages": "^2.1.1",
     "react": "^16.9.0",
